[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "vsmlrt-script"
description = "Auto-packaged version of upstream vs-mlrt script"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = ["VapourSynth"]
dynamic = ["version"]

[tool.hatch.version]
path = "scripts/vsmlrt.py"

[tool.hatch.build.targets.sdist]
include = ["scripts/vsmlrt.py", "LICENSE", "README"]

[tool.hatch.build.targets.wheel]
include = ["scripts/vsmlrt.py"]

[tool.hatch.build.targets.wheel.sources]
scripts = ""
